# JustCode-Rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dart_service  Dockerfile.flutter_service  Dockerfile.full_service  README.md  cdk.context.json  cdk.json  cdktf.json  go.mod  justfile  main.go  package-lock.json  package.json
api/common_api/: Cargo.toml
api/common_api/src/: dto.rs  error.rs  lib.rs
api/common_api/src/dto/: lambda_error_dto.rs  mod.rs
api/common_api/src/lambda/: from_request.rs  into_response.rs  lambda_error.rs  lambda_request_ext.rs  mod.rs  register_handler.rs  register_internal_handler.rs  user_context.rs
api/common_api/src/mapper/: mod.rs  presigned_url_dto.rs
api/lambda/auth/api_key_validator/: Cargo.toml
api/lambda/auth/api_key_validator/src/: main.rs
api/lambda/content/dto/: Cargo.toml
api/lambda/content/dto/src/mapper/: answer_dto.rs  answer_result_dto.rs  answer_validation_result_dto.rs  content_asset_dto.rs  error_dto.rs  expected_keyword_dto.rs  expected_options_dto.rs  expected_section_dto.rs  expected_task_content_dto.rs  expected_task_dto.rs  expected_technology_dto.rs  hint_dto.rs  keyword_dto.rs  keyword_modifier_dto.rs  mod.rs  option_dto.rs  personalized_task_dto.rs  (+9 more)
api/lambda/content/get_public_technologies_v1/: Cargo.toml
api/lambda/content/get_public_technologies_v1/src/: main.rs
api/lambda/content/get_tasks_v1/: Cargo.toml
api/lambda/content/get_tasks_v1/src/: main.rs
api/lambda/content/load_content_dry_run_v1/: Cargo.toml
api/lambda/content/load_content_dry_run_v1/src/: main.rs
api/lambda/content/on_assets_uploaded/: Cargo.toml
api/lambda/content/on_assets_uploaded/src/: handler.rs  main.rs
api/lambda/content/on_modifications_batch/: Cargo.toml
api/lambda/content/on_modifications_batch/src/: handler.rs  main.rs
api/lambda/content/request_assets_upload_v1/: Cargo.toml
api/lambda/content/request_assets_upload_v1/src/: main.rs
api/lambda/profile/create_profile/: Cargo.toml
api/lambda/profile/create_profile/src/: handler.rs  lib.rs  main.rs
api/lambda/profile/delete_profile_v1/: Cargo.toml
api/lambda/profile/delete_profile_v1/src/: handler.rs  main.rs
api/lambda/profile/dto/: Cargo.toml
api/lambda/profile/get_profile_v1/: Cargo.toml
api/lambda/profile/get_profile_v1/src/: main.rs
api/lambda/profile/on_avatars_created/: Cargo.toml
api/lambda/profile/on_avatars_created/src/: handler.rs  main.rs
api/lambda/profile/request_avatar_upload_v1/: Cargo.toml
api/lambda/profile/request_avatar_upload_v1/src/: handler.rs  main.rs
api/lambda/profile/update_profile_v1/: Cargo.toml
api/lambda/profile/update_profile_v1/src/: main.rs
api/lambda/profile/update_push_data_v1/: Cargo.toml
api/lambda/profile/update_push_data_v1/src/: main.rs
backend/api/common_api/: Cargo.toml
backend/api/common_api/src/: handle_actix_error.rs  lib.rs
backend/api/common_api/src/dto/: actix_error_dto.rs  axum_error_dto.rs  error_dto.rs  lambda_error_dto.rs  mod.rs
backend/api/common_api/src/lambda/: from_request.rs  into_response.rs  mod.rs  register_internal_handler.rs  user_context.rs  validate.rs  validate_dto.rs
backend/api/common_api/src/mapper/: error_dto.rs  presigned_url_dto.rs
backend/api/container/code_service/: Cargo.toml
backend/api/container/code_service/src/: config.rs  controller.rs  main.rs
backend/api/container/dart_service/: Cargo.toml  Dockerfile
backend/api/container/dart_service/src/: controller.rs  main.rs
backend/api/lambda/dart_version_v1/: Cargo.toml
backend/api/lambda/dart_version_v1/src/: main.rs
backend/feature/bucket/bucket_infra/: Cargo.toml
backend/feature/bucket/infra/: Cargo.toml
backend/feature/bucket/infra/src/: config.rs
backend/use_case/: Cargo.toml
backend/use_case/src/: analyze_code.rs  build_code.rs  build_code_2js.rs  format_code.rs  get_lang_version.rs  lib.rs  raw_code_analyze.rs
backend/use_case/src/auth/: mod.rs
backend/use_case/src/code/: analyze_code.rs  build_code.rs  build_code_2js.rs  format_code.rs  get_lang_version.rs  mod.rs  raw_code_analyze.rs
backend/use_case/src/content/: answer.rs  get_content_assets.rs  get_public_sections.rs  get_public_tasks.rs  get_sections.rs  get_tasks.rs  get_technologies.rs  load_content.rs  mod.rs  on_assets_uploaded.rs  on_modification_batch.rs  request_assets_upload.rs
backend/use_case/src/profile/: create_profile.rs  delete_profile.rs  get_profile_by_id.rs  mod.rs  on_avatar_created.rs  on_avatars_created.rs  request_avatar_upload.rs  set_push_data.rs  update_profile.rs
backend/use_case/src/task/: load_tasks.rs  mod.rs  on_modification_batch.rs
feature/common/domain/: Cargo.toml
feature/common/domain/src/: define_repo.rs  error.rs  identifiable.rs  lib.rs  mapper_traits.rs  tmp.rs
feature/common/infra/: Cargo.toml
feature/common/infra/src/: cognito_client.rs  lib.rs  sqs_client.rs
feature/common/infra/src/dynamodb/: client.rs  mod.rs
integration_tests/: Cargo.toml
integration_tests/tests/: main.rs
integration_tests/tests/common/: dynamodb.rs  mod.rs
integration_tests/tests/profile/: create_profile_test.rs  get_profile_test.rs
integration_tests/tests/util/: dynamodb.rs  mod.rs
use_case/: Cargo.toml
use_case/src/auth/: mod.rs  validate_secret_key.rs
use_case/src/content/: answer.rs  delete_content_assets.rs  get_content_assets.rs  get_public_sections.rs  get_public_tasks.rs  get_public_technologies.rs  get_sections.rs  get_tasks.rs  load_content.rs  mod.rs  on_assets_uploaded.rs  on_modification_batch.rs  request_assets_upload.rs
use_case/src/profile/: create_profile.rs  delete_profile.rs  get_profile_by_id.rs  mod.rs  on_avatars_created.rs  request_avatar_upload.rs  set_push_data.rs  update_profile.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/command/: build_lambda.rs  build_lambdas.rs  create_dart_layer.rs  create_dart_project_layer.rs  create_flutter_layer.rs  fetch_flutter.rs  mod.rs
xtask/src/model/: cargo_content.rs  error.rs  mod.rs
xtask/src/util/: cargo.rs  hash.rs  mod.rs  path.rs  path_ext.rs  project.rs  tmp_dir.rs  zip.rs
(+554 files in other folders)
