[workspace]
members = [
  "backend/api/common_api",
  "backend/api/gen",
  "backend/api/lambda/auth/*",
  "backend/api/lambda/content/*",
  "backend/api/lambda/profile/*",
  "backend/feature/bucket/*",
  "backend/feature/common/*",
  "backend/feature/content/*",
  "backend/feature/profile/*",
  "backend/feature/user/*",
  "backend/use_case",
  "integration_tests",
  "xtask",
]

[workspace.dependencies]
aws-config = { version = "0.55" }
aws-sdk-cognitoidentityprovider = { version = "0.25" }
aws-sdk-dynamodb = { version = "0.25" }
aws-sdk-s3 = { version = "0.25" }
aws-sdk-sqs = { version = "0.25" }
aws-smithy-http = { version = "0.55" }
aws_lambda_events = { version = "0.7", default-features = false }
axum = { version = "0.6" }
chrono = { version = "0.4" }
clap = { version = "4.2" }
darling = { version = "0.14" }
fake = { version = "2.5" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
git2 = { version = "0.16.1", default-features = false }
http = { version = "0.2" }
itertools = { version = "0.10" }
lambda_http = { version = "0.7", default-features = false, features = [
  "apigw_http",
] }
lambda_runtime = { version = "0.7" }
lazy_static = { version = "1.4" }
log = { version = "0.4" }
mime = { version = "0.3" }
mockall = { version = "0.11" }
nanoid = { version = "0.4" }
paste = { version = "1.0" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
rand = { version = "0.8" }
regex = { version = "1.7" }
serde = { version = "1.0" }
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+0_25"] }
serde_json = { version = "1.0" }
sha3 = { version = "0.10" }
syn = { version = "2.0" }
tokio = { version = "1.27" }
tokio-util = { version = "0.7" }
toml = { version = "0.5" }
tower-http = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.3" }
walkdir = { version = "2.3" }
zip = { version = "0.6", default-features = false }
