[workspace]
members = [
  "api/common_api",
  "api/gen",
  "api/lambda/auth/*",
  "api/lambda/content/*",
  "api/lambda/profile/*",
  "feature/bucket/*",
  "feature/common/*",
  "feature/content/*",
  "feature/profile/*",
  "feature/user/*",
  "use_case",
  "xtask",
]

[workspace.dependencies]
aws-config = { version = "0.55" }
aws-sdk-cognitoidentityprovider = { version = "0.25" }
aws-sdk-dynamodb = { version = "0.25" }
aws-sdk-s3 = { version = "0.25" }
aws-sdk-sqs = { version = "0.25" }
aws-smithy-http = { version = "0.55" }
aws_lambda_events = { version = "0.7", default-features = false, features = [
  "apigw",
  "s3",
  "sqs",
  "cognito",
] }
chrono = { version = "0.4" }
clap = { version = "4.3" }
darling = { version = "0.14" }
fake = { version = "2.5" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
git2 = { version = "0.16.1", default-features = false }
http = { version = "0.2" }
itertools = { version = "0.10" }
lambda_http = { version = "0.7", default-features = false, features = [
  "apigw_http",
] }
lambda_runtime = { version = "0.7" }
lazy_static = { version = "1.4" }
log = { version = "0.4" }
mime = { version = "0.3" }
mockall = { version = "0.11" }
nanoid = { version = "0.4" }
paste = { version = "1.0" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
rand = { version = "0.8" }
regex = { version = "1.8" }
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+0_25"] }
serde_json = { version = "1.0" }
sha3 = { version = "0.10" }
snafu = { version = "0.7", default-features = false, features = [
  "backtraces",
  "rust_1_61",
  "std",
] }
syn = { version = "2.0" }
testing_logger = { version = "0.1" }
tokio = { version = "1.29", features = ["full"] }
tokio-util = { version = "0.7" }
toml = { version = "0.5" }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.3", features = ["serde", "v4"] }
walkdir = { version = "2.3" }
zip = { version = "0.6", default-features = false }
