[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = { workspace = true }
aws_lambda_events = { workspace = true, features = ["cognito"] }
common_infra = { path = "../backend/feature/common/infra", features = [
  "dynamodb",
] }
create_profile = { path = "../backend/api/lambda/profile/create_profile" }
futures = { workspace = true }
get_profile_v1 = { path = "../backend/api/lambda/profile/get_profile_v1" }
lambda_http = { workspace = true, features = ["apigw_rest"] }
lambda_runtime = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
