[package]
name = "use_case"
version = "0.1.0"
edition = "2021"

[dependencies]
bucket_domain = { path = "../feature/bucket/domain" }
chrono = { workspace = true }
common_domain = { path = "../feature/common/domain" }
content_domain = { path = "../feature/content/domain" }
futures = { workspace = true }
log = { workspace = true }
mockall = { workspace = true }
profile_domain = { path = "../feature/profile/domain" }
tokio = { workspace = true }
