[package]
name = "common_api"
version = "0.1.0"
edition = "2021"

[dependencies]
bucket_domain = { path = "../../feature/bucket/domain" }
chrono = { workspace = true }
common_domain = { path = "../../feature/common/domain" }
gen = { path = "../gen" }
http = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
