[package]
name = "use_case"
version = "0.1.0"
edition = "2021"

[dependencies]
code_domain = { path = "../feature/code/code_domain", optional = true }
common_domain = { path = "../feature/common/common_domain" }
tokio = { workspace = true }

[features]
analyze_code = ["code_domain"]
get_version = ["code_domain"]
format_code = ["code_domain"]
raw_code_analyze = ["code_domain"]
get_lang_version = ["code_domain"]
build_code = ["code_domain"]
build_code_2js = ["code_domain"]
