[package]
name = "use_case"
version = "0.1.0"
edition = "2021"

[dependencies]
bucket_domain = { path = "../feature/bucket/domain", optional = true }
chrono = { workspace = true }
code_domain = { path = "../feature/code/domain", optional = true }
common_domain = { path = "../feature/common/domain" }
log = { workspace = true }
mockall = { workspace = true }
profile_domain = { path = "../feature/profile/domain", optional = true }
tokio = { workspace = true }

[features]
analyze_code = ["code_domain"]
get_version = ["code_domain"]
format_code = ["code_domain"]
raw_code_analyze = ["code_domain"]
get_lang_version = ["code_domain"]
build_code = ["code_domain"]
build_code_2js = ["code_domain"]
create_profile = ["profile_domain"]
update_profile = ["profile_domain"]
get_profile_by_id = ["profile_domain"]
request_avatar_upload = ["profile_domain", "bucket_domain"]
on_avatar_created = ["profile_domain", "bucket_domain"]
set_push_data = ["profile_domain"]
