[package]
name = "common_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
code_domain = { path = "../../feature/code/code_domain" }
common_domain = { path = "../../feature/common/common_domain" }
serde = { workspace = true, features = ["derive"] }

[features]
code = []
default = []
