[package]
name = "common_api"
version = "0.1.0"
edition = "2021"

[dependencies]
bucket_domain = { path = "../../feature/bucket/domain" }
chrono = { workspace = true }
common_domain = { path = "../../feature/common/domain" }
gen = { path = "../gen" }
http = { workspace = true }
lambda_http = { workspace = true, optional = true }
lambda_runtime = { workspace = true, optional = true }
mime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["trace"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
lambda = [
  "lambda_http",
  "tracing-subscriber",
  "tracing",
  "tower-http",
  "lambda_runtime",
]
