[package]
name = "common_domain"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
mockall = { workspace = true }
paste = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
testing_logger = { workspace = true }
