[package]
name = "common_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-smithy-http = { workspace = true }
common_domain = { path = "../domain" }
log = { workspace = true }
serde = { workspace = true }
serde_dynamo = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
