[package]
name = "api_key_validator"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { workspace = true }
common_api = { path = "../../../common_api" }
lambda_runtime = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
use_case = { path = "../../../../use_case" }
