[package]
name = "content_dto"
version = "0.1.0"
edition = "2021"

[dependencies]
common_domain = { path = "../../../../feature/common/domain" }
content_domain = { path = "../../../../feature/content/domain" }
gen = { path = "../../../gen" }

[dev-dependencies]
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
