[package]
name = "load_content_dry_run_v1"
version = "0.1.0"
edition = "2021"

[dependencies]
common_api = { path = "../../../common_api" }
content_domain = { path = "../../../../feature/content/domain" }
content_dto = { path = "../dto" }
content_infra = { path = "../../../../feature/content/infra" }
lambda_http = { workspace = true }
tokio = { workspace = true }
use_case = { path = "../../../../use_case" }
