[package]
name = "on_assets_uploaded"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { workspace = true, features = ["s3"] }
bucket_infra = { path = "../../../../feature/bucket/infra" }
common_api = { path = "../../../common_api", features = ["lambda"] }
content_infra = { path = "../../../../feature/content/infra" }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
use_case = { path = "../../../../use_case", features = ["on_assets_uploaded"] }
