[package]
name = "on_avatars_created"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { workspace = true }
bucket_infra = { path = "../../../../feature/bucket/infra" }
common_api = { path = "../../../common_api" }
lambda_runtime = { workspace = true }
profile_infra = { path = "../../../../feature/profile/infra" }
tokio = { workspace = true }
use_case = { path = "../../../../use_case" }
