[package]
name = "request_avatar_upload_v1"
version = "0.1.0"
edition = "2021"

[dependencies]
bucket_infra = { path = "../../../../feature/bucket/infra" }
common_api = { path = "../../../common_api" }
common_domain = { path = "../../../../feature/common/domain" }
futures = { workspace = true }
lambda_http = { workspace = true }
profile_infra = { path = "../../../../feature/profile/infra" }
tokio = { workspace = true }
use_case = { path = "../../../../use_case" }
