[package]
name = "request_avatar_upload_v1"
version = "0.1.0"
edition = "2021"

[dependencies]
bucket_infra = { path = "../../../../feature/bucket/infra" }
common_api = { path = "../../../common_api" }
lambda_http = { workspace = true }
profile_dto = { path = "../dto" }
profile_infra = { path = "../../../../feature/profile/infra" }
tokio = { workspace = true }
use_case = { path = "../../../../use_case" }
