[package]
name = "update_profile_v1"
version = "0.1.0"
edition = "2021"

[dependencies]
common_api = { path = "../../../common_api" }
lambda_http = { workspace = true }
profile_domain = { path = "../../../../feature/profile/domain" }
profile_dto = { path = "../dto" }
profile_infra = { path = "../../../../feature/profile/infra" }
tokio = { workspace = true }
use_case = { path = "../../../../use_case" }
