[package]
name = "code_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
code_domain = { path = "../../../feature/code/code_domain" }
code_infra = { path = "../../../feature/code/code_infra", features = [
  "dart",
  "flutter",
] }
common_api = { path = "../../common_api" }
common_domain = { path = "../../../feature/common/common_domain" }
common_infra = { path = "../../../feature/common/common_infra" }
futures = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true, features = [
  "release_max_level_info",
  "max_level_debug",
] }
tracing-subscriber = { workspace = true }
use_case = { path = "../../../use_case", features = [
  "raw_code_analyze",
  "format_code",
  "analyze_code",
  "get_lang_version",
] }

[features]
default = ["dart", "flutter"]
full = ["dart", "flutter"]
dart = []
flutter = []
