[package]
name = "bucket_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
bucket_domain = { path = "../domain" }
chrono = { workspace = true }
common_domain = { path = "../../common/domain" }
common_infra = { path = "../../common/infra", features = ["s3"] }
lazy_static = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
